--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,9 @@
 const path = require('path');
+require("@babel/register");
 
 module.exports = {
   'config': path.resolve('src/config/config.json'),
-  'models-path': path.resolve('src/models/'),
-  'seeders-path': path.resolve('src/seeders/'),
-  'migrations-path': path.resolve('src/migrations/'),
+  'models-path': path.resolve('src/migrations/models'),
+  'seeders-path': path.resolve('src/migrations/seeders'),
+  'migrations-path': path.resolve('src/migrations/migration'),
 };
