--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@babel/register": "^7.18.9",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
