--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
     "username": "postgres",
-    "password": "",
+    "password": "Myaz290d.",
     "database": "myos",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "migrationStorage": "none"
   }
 }
