--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "seed": "npx sequelize-cli db:seed:all",
-    "migrate":"npx sequelize-cli db:migrate",
+    "migrate": "npx sequelize-cli db:migrate",
     "publish:db": "npm run migrate && npm run seed",
     "dev": "env-cmd -f prod.env ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "nodemon . --ext ts --exec \"mocha -r ts-node/register src/tests/*.test.ts\"",
@@ -51,6 +51,7 @@
     "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
+    "js-big-decimal": "^1.3.13",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
