--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate": "npx sequelize-cli db:migrate",
     "publish:db": "npm run migrate && npm run seed",
     "dev": "env-cmd -f prod.env ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "nodemon . --ext ts --exec \"mocha -r ts-node/register src/tests/*.test.ts\"",
+    "test": "mocha -r ts-node/register src/tests/*.test.ts",
     "start": "env-cmd -f prod.env node dist/server.js",
     "build": "tsc -p .",
     "lint": "eslint . --ext .ts"
@@ -38,7 +38,6 @@
     "class-transformer": "^0.5.1",
     "eslint": "^8.25.0",
     "mocha": "^10.0.0",
-    "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
