--- a/migrations/config.json
+++ b/migrations/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "Myaz290d.",
+    "password": "",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "migrationStorage": "none"
