--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "seed": "npx sequelize-cli db:seed:all",
     "migrate": "npx sequelize-cli db:migrate",
     "publish:db": "npm run migrate && npm run seed",
-    "dev": "env-cmd -f prod.env ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "env-cmd -f dev.env ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "mocha -r ts-node/register src/tests/*.test.ts",
-    "start": "env-cmd -f prod.env node dist/server.js",
+    "start": "env-cmd -f dev.env node dist/server.js",
     "build": "tsc -p .",
     "lint": "eslint . --ext .ts"
   },
